--- a/tested/index.html
+++ b/tested/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js">
   <link rel="apple-touch-icon" href="pictures/favicon.jpeg" sizes="180x180">
@@ -37,138 +37,21 @@
 
   <div class="album py-5 bg-body-tertiary bg-transparent mx-4 my-4">
     <div class="container">
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <button type="button" class="btn-outline-secondary read_btn">
-                        <a class="text-decoration-none read" href="index_two.html">Read</a>
-                    </button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <button type="button" class="btn-outline-secondary read_btn">
-                        <a class="text-decoration-none read" href="index_two.html">Read</a>
-                    </button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-              <div class="card-body">
-                  <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                    <small class="text-body-secondary">? mins</small>
-                  </div>
-                </div>
-            </div>
-          </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
-            <div class="card-body">
-                <p class="card-text">This is an article about poison called "...". You can learn more about it, just look inside this article. It will be interesting</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn-outline-secondary read_btn">Read</button>
-                  <small class="text-body-secondary">? mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4" id="posts-container">
       </div>
     </div>
   </div>
-</div>
 
-<div class="d-flex flex-column flex-md-row align-items-center bg-light">
-  <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none read">
-    <span class="fs-4">Poisons</span>
-  </a>
+  <div class="d-flex flex-column flex-md-row align-items-center bg-light">
+    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none read">
+      <span class="fs-4">Poisons</span>
+    </a>
 
-  <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-    <a class="me-3 py-2 link-body-emphasis text-decoration-none other" href="#">Support</a>
-  </nav>
-</div>
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+      <a class="me-3 py-2 link-body-emphasis text-decoration-none other" href="#">Support</a>
+    </nav>
+  </div>
 
-
+  <script src="scripts/main.js"></script>
 </body>
 </html>
