--- a/ttet/index.html
+++ b/ttet/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="pictures/favicon_ico.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>TESTTT</title>
+  <title>test</title>
 </head>
 <body> 
   <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky top-0">
@@ -39,7 +39,7 @@
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Poison" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Poison_img</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
           <div class="card-body">
-              <p class="card-text">test2</p>
+              <p class="card-text">test</p>
               <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn-outline-secondary read_btn">
                       <a class="text-decoration-none read" href="index.html">Rate</a>
