fixed main footer need some sleep

--- a/ttet/index.html
+++ b/ttet/index.html
@@ -39,7 +39,7 @@
         <div class="card shadow-sm">
           <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Poison" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Poison_img</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Poison "..."</text></svg>
           <div class="card-body">
-              <p class="card-text">test</p>
+              <p class="card-text">LAMENT</p>
               <div class="d-flex justify-content-between align-items-center">
                   <button type="button" class="btn-outline-secondary read_btn">
                       <a class="text-decoration-none read" href="index.html">Rate</a>
@@ -53,7 +53,7 @@
   </div>
 </div>
 
-<div class="lowfoot d-flex flex-column flex-md-row align-content-end align-items-center bg-light">
+<div class="lowfoot d-flex flex-column flex-md-row align-content-end align-items-center bg-light fixed-bottom">
   <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none other">
     <span class="fs-4">Poisons</span>
   </a>
