--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="apple-touch-icon" href="pictures/favicon.jpeg" sizes="180x180">
   <link rel="icon" href="pictures/favicon_ico.ico">
   <title>Poison</title>
@@ -42,11 +44,11 @@
     </div>
   </div>
 
-  <div class="d-flex flex-column flex-md-row align-items-center bg-light">
-    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none read">
+  <div class="d-flex flex-column flex-md-row align-items-center bg-light fixed-bottom">
+    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none other">
       <span class="fs-4">Poisons</span>
     </a>
-
+  
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
       <a class="me-3 py-2 link-body-emphasis text-decoration-none other" href="#">Support</a>
     </nav>
