--- a/sosal/index.html
+++ b/sosal/index.html
@@ -53,7 +53,7 @@
   </div>
 </div>
 
-<div class="lowfoot d-flex flex-column flex-md-row align-content-end align-items-center bg-light">
+<div class="lowfoot d-flex flex-column flex-md-row align-content-end align-items-center bg-light fixed-bottom">
   <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none other">
     <span class="fs-4">Poisons</span>
   </a>
