--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <title>Poison</title>
 </head>
 <body> 
+  <dialog id="MyModule">
+    <form method="dialog">
+        <p>Вся информация, представленная на данном сайте, носит исключительно информационный характер и не является руководством к действию. Администрация сайта не несет ответственности за возможные последствия использования изложенных данных.</p>
+        <label>
+            <input type="checkbox" id="confirmCheckbox"> Я прочитал(а) информацию выше
+            и соглашаюсь с условиями
+        </label>
+        <button id="agreeButton" class="read_btn agree_btn">Подтвердить</button>
+    </form>
+</dialog>
   <nav class="navbar navbar-expand-lg navbar-light bg-light position-sticky top-0">
     <a class="navbar-brand other" href="#">
       <img src="pictures/favicon.jpeg" width="80" height="80" class="d-inline-block" alt="">
