--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="apple-touch-icon" href="pictures/favicon.jpeg" sizes="180x180">
   <link rel="icon" href="pictures/favicon_ico.ico">
+  <!-- Add these if you're supporting browsers that might not support <dialog> -->
+<link rel="stylesheet" href="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.css">
+<script src="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.js"></script>
+
   <title>Poison</title>
 </head>
 <body> 
