--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <title>Poison</title>
 </head>
 <body> 
+  <link rel="stylesheet" href="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.css">
+<script src="https://unpkg.com/dialog-polyfill@0.5.6/dialog-polyfill.js"></script>
   <dialog id="MyModule">
     <form method="dialog">
         <p>Вся информация, представленная на данном сайте, носит исключительно информационный характер и не является руководством к действию. Администрация сайта не несет ответственности за возможные последствия использования изложенных данных.</p>
